--- a/Views/CreateBookingView.xaml
+++ b/Views/CreateBookingView.xaml
@@ -238,9 +238,10 @@
 
             <StackPanel Orientation="Vertical">
 
-                <TextBlock Text="{Binding _selectedProperty.Name}" FontSize="23"/>
+                <TextBlock Text="{Binding _selectedProperty.DisplayName}" FontSize="23"/>
 
                 <Image Source="{Binding _selectedProperty.ImagePaths[0]}" Margin="20"/>
+                <TextBlock Text="{Binding _selectedProperty.DisplayPrices}" Margin="20"/>
 
 
 
